# Lucyd

./: .gitignore  Cargo.toml  LICENSE  README.md  docs.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.md  dx-improvement.md  feature-request.md
.github/workflows/: ci.yml  publish.yml  security.yml
crates/lucy/: Cargo.toml
crates/lucy-core/: Cargo.toml
crates/lucy-core/src/: assets.rs  lib.rs  registry.rs  router.rs  spec.rs
crates/lucy-core/src/openapi/: components.rs  mod.rs  paths.rs  refs.rs  test_support.rs
crates/lucy-core/tests/: openapi_conformance.rs
crates/lucy-macro/: Cargo.toml
crates/lucy-macro/src/: common.rs  http.rs  lib.rs  mqtt.rs  ws.rs
crates/lucy-types/: Cargo.toml
crates/lucy-types/src/: endpoint.rs  lib.rs  schema.rs
crates/lucy/examples/: demo.rs
crates/lucy/src/: lib.rs
crates/lucy/tests/: http_registration.rs
docs/: 01-installation.md  02-setup.md  03-macros.md  04-json-schema.md  05-spec-format.md  06-openapi-export.md  07-building-ui.md  08-ui-features.md  09-full-example.md  10-architecture.md  11-limitations.md  12-import-openapi.md  README.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx  main.tsx
ui/src/components/: AuthModal.tsx  HttpEndpointCard.tsx  MqttTopicCard.tsx  SchemaViewer.tsx  WsEndpointCard.tsx
ui/src/context/: AuthContext.tsx
ui/src/hooks/: useMqtt.ts  useSpec.ts  useWebSocket.ts
ui/src/panels/: HttpPanel.tsx  ModelsPanel.tsx  MqttPanel.tsx  WsPanel.tsx
ui/src/types/: index.ts
ui/src/utils/: groupByTag.ts  schemaToExample.ts
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/src/import_openapi/: codegen.rs  document.rs  merge.rs  mod.rs  operations.rs  rust_type.rs  summary.rs
xtask/tests/: import_openapi_roundtrip.rs
xtask/tests/fixtures/: sample_openapi.yaml
