[workspace]
resolver = "2"
members  = [
    "crates/lucy",
    "crates/lucy-types",
    "crates/lucy-macro",
    "crates/lucy-core",
    "xtask",
]
exclude = ["ui"]

[workspace.package]
version     = "0.1.9"
edition     = "2024"
license     = "MIT"
authors     = ["Arnaud Fischer"]
repository  = "https://github.com/Jeck0v/Lucyd"

[workspace.dependencies]
# Internal crates, path for local dev, version resolved from crates.io when published
lucy-types = { path = "crates/lucy-types", version = "0.1.9" }
lucy-core  = { path = "crates/lucy-core",  version = "0.1.9" }
lucy-macro = { path = "crates/lucy-macro", version = "0.1.9" }

# Async runtime
tokio = { version = "1.44.2", features = ["full"] }

# Web framework
axum = "0.8.4"

# Serialization
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Proc-macro utilities
proc-macro2 = "1.0.95"
syn         = { version = "2.0.100", features = ["full"] }
quote       = "1.0.40"

# Asset embedding
rust-embed = "8.5.0"

# JSON Schema generation
schemars = "0.8.22"

# Compile-time static registration
inventory = "0.3"
