[package]
name    = "lucy-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum        = { workspace = true }
tokio       = { workspace = true }
serde_json  = { workspace = true }
rust-embed  = { workspace = true }
lucy-types  = { path = "../lucy-types" }
