[package]
name    = "lucy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lucy-core  = { path = "../lucy-core" }
lucy-macro = { path = "../lucy-macro" }
lucy-types = { path = "../lucy-types" }
inventory  = { workspace = true }
schemars   = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
lucy-core = { path = "../lucy-core" }
